--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
         <version>2.1.5</version>
         
     </dependency> 
+    <dependency>
+		<groupId>com.oracle</groupId>
+		<artifactId>ojdbc8</artifactId>
+		<version>19.3</version>
+	</dependency>
     
   </dependencies>
   
