added db connection

--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,11 @@
 		<artifactId>ojdbc8</artifactId>
 		<version>19.3</version>
 	</dependency>
-    
+    <dependency>
+   <groupId>org.postgresql</groupId>
+   <artifactId>postgresql</artifactId>
+   <version>9.3-1102-jdbc41</version>
+</dependency>
   </dependencies>
   
 </project>
