data projectdashboardtest and Trash

--- a/Property/data.properties
+++ b/Property/data.properties
@@ -3,4 +3,5 @@ active.env=qa
 projectName=Untitled Project
 folderName=Untitled Folder
 renameProjectName=ProjectNameRenamed
+trashProjectName=WriteWay Project
 os=mac
